--- a/css/app.css
+++ b/css/app.css
@@ -16,10 +16,12 @@ a {
 }
 body{
 	background-color: #ffffff;
+    font-family: "Roboto", sans-serif;
 }
 .container{
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto;
+    background-size: cover;
 }
 .main-header{
     padding: 12px 80px;
@@ -48,8 +50,16 @@ body{
    .col-100{
     width: 100%;
    }
+   .col-60{
+    width: 60%;
+    margin-top: 50px;
+   }
+   .col-40{
+    width:40%;
+    margin-top: 50px;
+   }
    .row{
-    width: 650px;
+    width: 700px;
     margin: auto;
     margin-top: 60px;
     height: 300px;
@@ -61,7 +71,7 @@ body{
     color: white;
 }
 .title{
-    font-size: 50px;
+    font-size: 40px;
 }
 .description{
     margin-top: 30px;
@@ -74,4 +84,14 @@ body{
 .browser{
     background-color: black;
     color: white;
+}
+.layout-2 .container{
+    text-align:left ;
+    height:500px;
+}
+.layout-3 .container{
+    height: 600px;
+}
+.layout-3{
+    background-color: rgb(201, 202, 200);
 }
