--- a/css/app.css
+++ b/css/app.css
@@ -96,3 +96,7 @@ body{
 .layout-3{
     background-color: rgb(201, 202, 200);
 }
+.layout-4{
+    background-color: rgb(201, 202, 200);
+    height: 500px;
+}
