--- a/css/app.css
+++ b/css/app.css
@@ -60,7 +60,7 @@ body{
     margin-top: 50px;
    }
    .row{
-    width: 700px;
+    width: 730px;
     margin: auto;
     margin-top: 60px;
     height: 300px;
@@ -98,5 +98,26 @@ body{
 }
 .layout-4{
     background-color: rgb(201, 202, 200);
-    height: 500px;
+    height: 1050px;
+}
+.download-section{
+    background-color: rgb(201, 202, 200);
+    margin-top: 0PX;
+}
+.tecnology{
+    text-align: center;
+    margin-top: 40px;
+}
+.download{
+    text-align: center;
+    margin-top: 40px;
+    background-image: url(../img/stars.svg);
+    background-size: cover;
+    height: 100px;
+    width: 1000px;
+    line-height: 40px;
+}
+.mac{
+    background-color: rgb(92, 132, 218);
+    text-align: center;
 }
