--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items:center;
+    padding: 10px;
    }
    .main-menu{
     display: flex;
@@ -59,10 +60,13 @@ body{
     width:40%;
     margin-top: 50px;
    }
+   .col-20{
+    width: 20%;
+    margin-top: 50px;
+   }
    .row{
     width: 730px;
     margin: auto;
-    margin-top: 60px;
     height: 300px;
     display: flex;
     flex-wrap: wrap;
@@ -100,6 +104,10 @@ body{
     background-color: rgb(201, 202, 200);
     height: 1050px;
 }
+.layout-5{
+    background-color:rgb(31, 28, 28);
+    height: 600px;
+}
 .download-section{
     background-color: rgb(201, 202, 200);
     margin-top: 0PX;
@@ -120,4 +128,37 @@ body{
 .mac{
     background-color: rgb(92, 132, 218);
     text-align: center;
+    color: white;
+}
+.footer-title{
+    color:rgb(92, 132, 218); 
+}
+.italia{
+    height: 15px;
+    padding-right: 5px;
+}
+.footer-text{
+    color: rgb(255, 255, 255);
+    font-size:14px ;
+}
+.icons{
+    padding-top: 10px;
+}
+.service{
+    color: white;
+    font-size: small;
+    line-height:  30px;
+}
+.subsection-title{
+    color: rgb(92, 132, 218);
+}
+hr{
+    margin-top: 100px;
+    border-color: rgb(92, 132, 218);
+}
+.register{
+    background-color:rgb(92, 132, 218); 
+    padding: 12px 25px;
+    border-radius: 20px;
+    color: white;
 }
